--- a/argocdod/apps/toston/templates/matoshon_cr.yaml
+++ b/argocdod/apps/toston/templates/matoshon_cr.yaml
@@ -1,7 +1,7 @@
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: toston_adminon
+  name: matoshon_adminon
 rules:
   - verbs:
       - get
