--- a/argocdod/apps/toston/templates/app-argo.yaml
+++ b/argocdod/apps/toston/templates/app-argo.yaml
@@ -3,20 +3,20 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: app_argo-conf
-  namespace:  app_argo
+  namespace:  
 data:
    config.py: |+
-     argoUrl = '{{ .Values.configmap.argoUrl }}'
-     appsApi = '{{ .Values.configmap.appsApi }}'
-     authApi = '{{ .Values.configmap.authApi }}'
-     login = '{{ .Values.configmap.login }}'
-     splunkUrl = '{{ .Values.configmap.splunkUrl }}'
-     splunkAuth = '{{ .Values.configmap.splunkAuth }}'
-     repoApi = '{{ .Values.configmap.repoApi }}'
-     cluster_name = '{{ .Values.configmap.cluster_name }}'
-     reponame = '{{ .Values.configmap.reponame }}'
-     url = '{{ .Values.configmap.url }}'
-     verifySSl = '{{ .Values.configmap.verifySSl }}
+     argoUrl = '{{ .Values.argo_app.configmap.argoUrl }}'
+     appsApi = '{{ .Values.argo_app.configmap.appsApi }}'
+     authApi = '{{ .Values.argo_app.configmap.authApi }}'
+     login = '{{ .Values.argo_app.configmap.login }}'
+     splunkUrl = '{{ .Values.argo_app.configmap.splunkUrl }}'
+     splunkAuth = '{{ .Values.argo_app.configmap.splunkAuth }}'
+     repoApi = '{{ .Values.argo_app.configmap.repoApi }}'
+     cluster_name = '{{ .Values.argo_app.configmap.cluster_name }}'
+     reponame = '{{ .Values.argo_app.configmap.reponame }}'
+     url = '{{ .Values.argo_app.configmap.url }}'
+     verifySSl = '{{ .Values.argo_app.configmap.verifySSl }}
 ---
 # Source: statuson/templates/cronjob.yaml
 apiVersion: batch/v1beta1
