--- a/argocdod/apps/toston/values.yaml
+++ b/argocdod/apps/toston/values.yaml
@@ -22,17 +22,17 @@ argo_app:
   every_minutes: 3
 
   configmap:  
-    argoUrl = 'https://argocd.apps.np.cloudlet-dev.com/'
-    appsApi = 'api/v1/clusters'
-    authApi = 'api/v1/session'
-    login = {"username": "admin", "password": "redhat"}
-    splunkUrl = 'https://13.90.23.80:8088/services/collector/event'
-    splunkAuth = {'Authorization': 'Splunk c92a548a-e243-41ab-9168-8a17ce013342'}
-    repoApi = 'api/v1/repositories'
-    cluster_name = 'np'
-    reponame = 'cloudlet'
-    url = 'https://argocd.apps.np.cloudlet-dev.com/'
-    verifySSl = False
+    argoUrl: 'https://argocd.apps.np.cloudlet-dev.com/'
+    appsApi: 'api/v1/clusters'
+    authApi: 'api/v1/session'
+    login: {"username": "admin", "password": "redhat"}
+    splunkUrl: 'https://13.90.23.80:8088/services/collector/event'
+    splunkAuth: {'Authorization': 'Splunk c92a548a-e243-41ab-9168-8a17ce013342'}
+    repoApi: 'api/v1/repositories'
+    cluster_name: 'np'
+    reponame: 'cloudlet'
+    url: 'https://argocd.apps.np.cloudlet-dev.com/'
+    verifySSl: False
 
 
 
