--- a/argocdod/apps/apicast-helm/values.yaml
+++ b/argocdod/apps/apicast-helm/values.yaml
@@ -2,7 +2,7 @@
 
 CONFIGURATION_URL_SECRET: apicast-configuration-url-secret
 CONFIGURATION_FILE_PATH:
-IMAGE_NAME: 'quay.io/3scale/apicast:master'
+IMAGE_NAME: 'quay.apps.{{Valuse.configmap.fqdn}}/cloudlet/picast:master'
 DEPLOYMENT_ENVIRONMENT: production
 APICAST_NAME: apicast
 APICAST_WORKERS: 
