--- a/argocdod/apps/externalsecrets-operator/templates/deployment.yaml
+++ b/argocdod/apps/externalsecrets-operator/templates/deployment.yaml
@@ -35,7 +35,7 @@ spec:
       {{- end }}
       containers:
         - name: {{ .Chart.Name }}
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          image: "{{ .Values.image.repository }}/{{ .Values.image.name }}:{{ .Values.image.tag }}"
           ports:
           - name: prometheus
             containerPort: {{ .Values.env.METRICS_PORT }}
