--- a/argocdod/apps/node-postgres/values.yaml
+++ b/argocdod/apps/node-postgres/values.yaml
@@ -1,5 +1,6 @@
 image:
-  repository: quay.io/amitai333/sampleapp
+  repository: quay.io/amitai333
+  name: sampleapp
   tag: latest
 
 namespace: node-postgres
