--- a/argocdod/apps/apicast-helm/values.yaml
+++ b/argocdod/apps/apicast-helm/values.yaml
@@ -6,7 +6,7 @@ image:
   
 CONFIGURATION_URL_SECRET: apicast-configuration-url-secret
 CONFIGURATION_FILE_PATH:
-IMAGE_NAME: 'quay.apps.{{Valuse.configmap.fqdn}}/cloudlet/apicast:master'
+#IMAGE_NAME: 'quay.apps.{{Valuse.configmap.fqdn}}/cloudlet/apicast:master'
 DEPLOYMENT_ENVIRONMENT: production
 APICAST_NAME: apicast
 APICAST_WORKERS: 
