--- a/argocdod/apps/toston/values.yaml
+++ b/argocdod/apps/toston/values.yaml
@@ -8,23 +8,11 @@ configmap:
 minio_test:
   configmap:  
     fqdn: dev.cloudlet-dev.com
-  image:
+  containers:
     repository: docker.io/meshistern
     image: minio-test-secure
-    version: "latest"
+    version: latest
 
-matoshon:    
-  image:
-    repository: hacetah726
-    name: matoshon
-    tag: 2
-
-quay_test:    
-  image:
-    repository: quay.io/almoggo
-    name: quaytest
-    tag: "latest"
-    
 argo_app:    
   image:
     repository: snir1234
@@ -45,7 +33,4 @@ argo_app:
     reponame: 'cloudlet'
     url: 'https://argocd.apps.np.cloudlet-dev.com/'
     verifySSl: False
-
-
-
 
