--- a/argocdod/apps/toston/templates/minio-test.yaml
+++ b/argocdod/apps/toston/templates/minio-test.yaml
@@ -51,7 +51,7 @@ spec:
                 defaultMode: 420
           containers:
             - name: minio-test
-              image: {{ .Values.minio_test.image.repository }}/{{ .Values.minio_test.image.name }}:{{ .Values.minio_test.image.tag }
+              image: {{ .Values.minio_test.image.repository }}/{{ .Values.minio_test.image.name }}:{{ .Values.minio_test.image.tag }}
               resources: {}
               volumeMounts:
                 - name: trusted-ca
