--- a/argocdod/apps/toston/values.yaml
+++ b/argocdod/apps/toston/values.yaml
@@ -9,7 +9,7 @@ minio_test:
   configmap:  
     fqdn: dev.cloudlet-dev.com
   image:
-    repository: docker.io/meshistern
+    repository: meshistern
     image: minio-test-secure
     version: latest
 
