--- a/argocdod/templates/speedtest-download.yaml
+++ b/argocdod/templates/speedtest-download.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: speedtest-download
+  name: speedtest-download-{{ template "cluster_name" . }}
   namespace: {{ .Values.argocdNamespace }}
 spec:
   destination:
