--- a/SpeedTest/download-cloud-app/download-cloud-helm/values.yaml
+++ b/SpeedTest/download-cloud-app/download-cloud-helm/values.yaml
@@ -1,6 +1,6 @@
 # Default values for download-cloud-helm.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
-OPENSHIFT_URL: apps.prod.cloudlet-dev.com
+OPENSHIFT_URL: apps.np.cloudlet-dev.com
 PORT: 8000
 IMAGE_NAME: "registry.hub.docker.com/antonz23/download-cloud-app:latest"
