--- a/argocdod_central_np/values.yaml
+++ b/argocdod_central_np/values.yaml
@@ -1,6 +1,6 @@
 spec:
   destination:
-    server: "https://api.prod.cloudlet-dev.com:6443"
+    server: "https://api.np.cloudlet-dev.com:6443"
     namespace: "argocdod"
   source:
     repoURL: https://github.com/matancarmeli7/cloudlet
