--- a/argocdod/apps/toston/values.yaml
+++ b/argocdod/apps/toston/values.yaml
@@ -37,12 +37,12 @@ argo_app:
     argoUrl: 'https://argocd.apps.np.cloudlet-dev.com/'
     appsApi: 'api/v1/clusters'
     authApi: 'api/v1/session'
-    login: {"username": "admin", "password": "redhat"}
     splunkUrl: 'https://13.90.23.80:8088/services/collector/event'
-    splunkAuth: {'Authorization': 'Splunk c92a548a-e243-41ab-9168-8a17ce013342'}
     repoApi: 'api/v1/repositories'
     cluster_name: 'np'
     reponame: 'cloudlet'
     url: 'https://argocd.apps.np.cloudlet-dev.com/'
-    verifySSl: False
+    verifySSl: 'False'
+    userName: 'admin'
+    password: 'redhat'
 
