--- a/argocdod/apps/toston/templates/app-argo.yaml
+++ b/argocdod/apps/toston/templates/app-argo.yaml
@@ -14,9 +14,9 @@ data:
      cluster_name = '{{ .Values.argo_app.configmap.cluster_name }}'
      reponame = '{{ .Values.argo_app.configmap.reponame }}'
      url = '{{ .Values.argo_app.configmap.url }}'
-     verifySSl = '{{ .Values.argo_app.configmap.verifySSl }}
-     userName = '{{ .Values.argo_app.configmap.userName }}
-     password = '{{ .Values.argo_app.configmap.password }}
+     verifySSl = '{{ .Values.argo_app.configmap.verifySSl }}'
+     userName = '{{ .Values.argo_app.configmap.userName }}'
+     password = '{{ .Values.argo_app.configmap.password }}'
 ---
 # Source: statuson/templates/cronjob.yaml
 apiVersion: batch/v1beta1
