--- a/app_argo/Dockerfile
+++ b/app_argo/Dockerfile
@@ -1,14 +1,12 @@
 FROM python:3.8.5-alpine
 
-WORKDIR /app_argo
+RUN addgroup -S dod && adduser -S dod -G dod
+
+WORKDIR -p /app_argo/config
 
 RUN pip install httpx requests
 
 COPY ./app_argo.py .
-
-COPY ./config.py .
-
-RUN addgroup -S dod && adduser -S dod -G dod
 
 USER dod
 
