--- a/argocdod/apps/collectorforopenshift/values.yaml
+++ b/argocdod/apps/collectorforopenshift/values.yaml
@@ -1,10 +1,10 @@
 image:
-  repository: quay.io/meshistern
+  repository: quay.io/cloudlet
   name: collectorforopenshift
 #  repository: docker.io/outcoldsolutions/collectorforopenshift
   tag: 5.14.284
 configmap:
-  splunk_url: https://13.90.23.80:8088/services/collector/event
-  splunk_token: bfb0ea00-fad4-4166-9f20-2e7fedda26fb
+  splunk_url: https://splunk.cloudlet-dev.com:8088/services/collector/event
+  splunk_token: f0ccaab5-b586-4732-8b88-7014465608a7
   cluster_name: dev
   license_key: QlJVOTZKMTg2Q1I1RTo0MDA6MTYyODY4OTQ4NDoy.I27I+r0mfHeZOYxDvMviM3cudOXWThGcJDiiDg.MeryEI9odNTYAz08DAqYYmGQFaCdx3PhfBr1rw
