--- a/argocdod/apps/toston/templates/quay-test.yaml
+++ b/argocdod/apps/toston/templates/quay-test.yaml
@@ -3,7 +3,7 @@ kind: ConfigMap
 apiVersion: v1
 metadata:
   name: test
-  namespace: {{ .Values.namespace }}
+  namespace: toston
   annotations:
     argocd.argoproj.io/hook: PreSync
 data:
