--- a/argocdod/apps/toston/templates/quay-test.yaml
+++ b/argocdod/apps/toston/templates/quay-test.yaml
@@ -4,6 +4,8 @@ apiVersion: v1
 metadata:
   name: test
   namespace: toston
+  annotations:
+    argocd.argoproj.io/hook: PreSync
 data:
   config.py: |+
     quay_url_conf = 'https://quay.apps.{{ .Values.configmap.fqdn }}'
