--- a/argocdod/apps/speedtest-download/values.yaml
+++ b/argocdod/apps/speedtest-download/values.yaml
@@ -6,4 +6,4 @@ SPLUNK_TOKEN: "0dde0859-27ff-43aa-b981-3eaca4fa4813"
 SPLUNK_URL: "https://13.90.23.80:8088/services/collector/event"
 MIN_CHECK_TIME: 2
 OCP_NAME: np
-IMAGE_NAME: "registry.hub.docker.com/antonz23/download-cloudlet-app:latest"
+IMAGE_NAME: "quay.apps.{{Valuse.configmap.fqdn}}/cloudlet/download-cloudlet-app:latest"
