--- a/argocdod/apps/quaylogs/values.yaml
+++ b/argocdod/apps/quaylogs/values.yaml
@@ -7,5 +7,5 @@ configmap:
 
 containers:
   repository: quay.apps.{{Valuse.configmap.fqdn}}/cloudlet
-  image: quay-logs
+  image: quaylogs
   version: latest
