--- a/argocdod/apps/speedtest-download/templates/cronjob.yaml
+++ b/argocdod/apps/speedtest-download/templates/cronjob.yaml
@@ -2,13 +2,13 @@
 kind: Namespace
 apiVersion: v1
 metadata:
-  name: speedtest-download-cloudlet
+  name: speedtestCloudlet
 ---
 kind: CronJob
 apiVersion: batch/v1beta1
 metadata:
   name: speedtest-download-cloudlet
-  namespace: speedtest-download-cloudlet
+  namespace: speedtestCloudlet
 spec:
   startingDeadlineSeconds: 300
   schedule: '*/3 * * * *'
@@ -21,7 +21,7 @@ spec:
       template:
         spec:
           containers:
-			- name: speedtest-download
+	    - name: speedtest-download
               image: "{{ .Values.IMAGE_NAME }}"
               ports:
               - containerPort: 8000
