--- a/argocdod/apps/speedtest-download/templates/cronjob.yaml
+++ b/argocdod/apps/speedtest-download/templates/cronjob.yaml
@@ -1,44 +1,32 @@
----
-kind: Namespace
-apiVersion: v1
-metadata:
-  name: speedtestCloudlet
----
-kind: CronJob
-apiVersion: batch/v1beta1
+apiVersion: apps/v1
+kind: Deployment
 metadata:
   name: speedtest-download-cloudlet
-  namespace: speedtestCloudlet
 spec:
-  startingDeadlineSeconds: 300
-  schedule: '*/3 * * * *'
-  concurrencyPolicy: Replace
-  jobTemplate:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: speedtest-download
+  template:
     metadata:
       labels:
         app: speedtest-download
     spec:
-      template:
-        spec:
-          containers:
-            - name: speedtest-download
-              image: "{{ .Values.IMAGE_NAME }}"
-              ports:
-              - containerPort: 8000
-                protocol: TCP
-              resources: {}
-              terminationMessagePath: /dev/termination-log
-              terminationMessagePolicy: File
-              imagePullPolicy: Always
-              env:
-                - name: MAIN_APP_URL 
-                  value: "{{ .Values.MAIN_APP_URL }}"
-                - name: SPLUNK_TOKEN
-                  value: "{{ .Values.SPLUNK_TOKEN }}"
-                - name: SPLUNK_URL
-                  value: "{{ .Values.SPLUNK_URL }}"
-                - name: MIN_CHECK_TIME
-                  value: "{{ .Values.MIN_CHECK_TIME }}"
-                - name: OCP_NAME
-                  value: "{{ .Values.OCP_NAME }}"
-          restartPolicy: Never
+      containers:
+      - name: speedtest-download
+        image: "{{ .Values.IMAGE_NAME }}"
+        ports:
+        - containerPort: 8000
+          protocol: TCP
+        env:
+        - name: MAIN_APP_URL 
+          value: "{{ .Values.MAIN_APP_URL }}"
+        - name: SPLUNK_TOKEN
+          value: "{{ .Values.SPLUNK_TOKEN }}"
+        - name: SPLUNK_URL
+          value: "{{ .Values.SPLUNK_URL }}"
+        - name: MIN_CHECK_TIME
+          value: "{{ .Values.MIN_CHECK_TIME }}"
+        - name: OCP_NAME
+          value: "{{ .Values.OCP_NAME }}"
+      restartPolicy: Always
