--- a/argocdod/apps/speedtest-download/templates/cronjob.yaml
+++ b/argocdod/apps/speedtest-download/templates/cronjob.yaml
@@ -1,5 +1,7 @@
 ---
-kind: Namespace
 apiVersion: v1
+kind: Namespace
 metadata:
+  labels:
+    app: speedtest-download-cloudlet
   name: speedtest-download-cloudlet
