--- a/SpeedTest/download-cloud-app/download-cloud-helm/templates/Route.yaml
+++ b/SpeedTest/download-cloud-app/download-cloud-helm/templates/Route.yaml
@@ -11,4 +11,7 @@ spec:
     weight: 100
   port:
     targetPort: speedtest-download
+  tls:
+    termination: edge
+    insecureEdgeTerminationPolicy: Redirect
   wildcardPolicy: None
