--- a/argocdod/apps/quaylogs/values.yaml
+++ b/argocdod/apps/quaylogs/values.yaml
@@ -3,7 +3,7 @@ configmap:
   cluster_name: prod
   quay_token: m22zF0WNdB0apZXsURx5YNvyukGoaeMefCziaRWp
   splunk_token: 76dfd089-67f2-4262-978e-755af5c0775a
-  fqdn: dev.cloudlet-dev.com
+  fqdn: cloudlet.dev
 
 containers:
   repository: quay.apps.{{Valuse.configmap.fqdn}}/cloudlet
