--- a/argocdod/apps/collectorforopenshift/values.yaml
+++ b/argocdod/apps/collectorforopenshift/values.yaml
@@ -4,7 +4,7 @@ image:
 #  repository: docker.io/outcoldsolutions/collectorforopenshift
   tag: 5.14.284
 configmap:
-  splunk_url: https://splunk.cloudlet-dev.com:8088/services/collector/event
+  splunk_url: https://splunk.idf-cts.com:8088/services/collector/event
   splunk_token: f0ccaab5-b586-4732-8b88-7014465608a7
   cluster_name: dev
   license_key: QlJVOTZKMTg2Q1I1RTo0MDA6MTYyODY4OTQ4NDoy.I27I+r0mfHeZOYxDvMviM3cudOXWThGcJDiiDg.MeryEI9odNTYAz08DAqYYmGQFaCdx3PhfBr1rw
