--- a/argocdod/apps/quaylogs/values.yaml
+++ b/argocdod/apps/quaylogs/values.yaml
@@ -6,6 +6,6 @@ configmap:
   fqdn: cloudlet.dev
 
 containers:
-  repository: quay.apps.{{Values.configmap.fqdn}}/cloudlet
+  repository: quay.apps.{{Values.configmap.fqdn}}/cloudlet-org
   image: quaylogs
   version: latest
