--- a/argocdod/apps/app-argo/values.yaml
+++ b/argocdod/apps/app-argo/values.yaml
@@ -1,5 +1,5 @@
 image:
-  repository: quay.apps.{{Valuse.configmap.fqdn}}/cloudlet
+  repository: quay.apps.{{Values.configmap.fqdn}}/cloudlet-org
   name: app_argo
   tag: "latest"
 
