--- a/argocdod/apps/speedtest-download/values.yaml
+++ b/argocdod/apps/speedtest-download/values.yaml
@@ -6,5 +6,5 @@ SPLUNK_TOKEN: "0dde0859-27ff-43aa-b981-3eaca4fa4813"
 SPLUNK_URL: "https://13.90.23.80:8088/services/collector/event"
 MIN_CHECK_TIME: 2
 OCP_NAME: np
-#IMAGE_NAME: "quay.apps.{{Valuse.configmap.fqdn}}/cloudlet/speedtest-download:latest"
+#IMAGE_NAME: "quay.apps.{{Values.configmap.fqdn}}/cloudlet-org/speedtest-download:latest"
 IMAGE_NAME: "docker.io/meshistern/speedtest-download:latest"
