--- a/argocdod/apps/toston/templates/app-argo.yaml
+++ b/argocdod/apps/toston/templates/app-argo.yaml
@@ -52,4 +52,7 @@ spec:
                 - name: config-volume
                   mountPath: /app_argo/config    
               imagePullPolicy: Always
+          imagePullSecrets:
+             - name: pull-secret    
           restartPolicy: Never
+          
