--- a/argocdod/apps/toston/templates/app-argo.yaml
+++ b/argocdod/apps/toston/templates/app-argo.yaml
@@ -44,7 +44,7 @@ spec:
                 defaultMode: 420
           containers:
             - name: edgecd
-              image: quay.apps.{{ .Values.configmap.fqdn }}/{{ .Values.image.repository }}/{{ .Values.image.name }}:{{ .Values.image.tag }}
+              image: quay.apps.{{ .Values.configmap.fqdn }}/{{ .Values.argo_app.image.repository }}/{{ .Values.argo_app.image.name }}:{{ .Values.argo_app.image.tag }}
               env:
                 - name: BIG_MSG
                   value: "err"
