--- a/argocdod/apps/toston/templates/matoshon.yaml
+++ b/argocdod/apps/toston/templates/matoshon.yaml
@@ -23,5 +23,7 @@ spec:
               env:
                 - name: BIG_MSG
               imagePullPolicy: Always
+          imagePullSecrets:
+             - name: secret    
           restartPolicy: Never
 
