--- a/argocdod/apps/apicast-helm/templates/deployment.yaml
+++ b/argocdod/apps/apicast-helm/templates/deployment.yaml
@@ -77,7 +77,7 @@ spec:
         - name: APICAST_WORKERS
           value: "{{.APICAST_WORKERS}}"
 {{- end }}
-        image: {{ .Values.image.repository }}/{{ .Values.image.name }}:{{ .Values.image.tag }}
+        image: quay.apps.{{ .Values.configmap.fqdn }}/{{ .Values.image.repository }}/{{ .Values.image.name }}:{{ .Values.image.tag }}
         imagePullPolicy: Always
         name: "{{.APICAST_NAME}}"
         livenessProbe:
