--- a/argocdod/apps/collectorforopenshift/templates/collectorforopenshift.yaml
+++ b/argocdod/apps/collectorforopenshift/templates/collectorforopenshift.yaml
@@ -1328,7 +1328,7 @@ spec:
         effect: "NoExecute"
       containers:
       - name: collectorforopenshift
-        image: {{ .Values.image.repository }}/{{ .Values.image.name }}:{{ .Values.image.tag }}
+        image: quay.apps.{{ .Values.configmap.fqdn }}/{{ .Values.image.repository }}/{{ .Values.image.name }}:{{ .Values.image.tag }}
         securityContext:
           privileged: true
           runAsUser: 0
